# speicherwald

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  lcov.info  rustfmt.toml
.agent/rules/: nobuild.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependency-check.yml  dependency-review.yml
.windsurf/workflows/: code.md
benches/: scanner_bench.rs
config/: default.toml
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
migrations/: 20251012_add_timestamps.sql
scripts/: install.ps1  install_admin.cmd  install_user.cmd  package_portable.py  run_dev.py  verify_all.py
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  state.rs  tests.rs  types.rs
src/middleware/: auth.rs  csrf.rs  ip.rs  mod.rs  rate_limit.rs  security_headers.rs  validation.rs
src/routes/: drives.rs  export.rs  health.rs  mod.rs  paths.rs  paths_helpers.rs  scans.rs  search.rs
src/scanner/: mod.rs
src/tests/: api_tests.rs  config_tests.rs  db_tests.rs  drives_api_tests.rs  error_tests.rs  health_api_tests.rs  mod.rs  scanner_tests.rs
ui/: index.html  speicherwald-ui-224fd8221d8d9467.js  speicherwald-ui-224fd8221d8d9467_bg.wasm  speicherwald-ui-2845e30ccd99e10b.js  speicherwald-ui-2845e30ccd99e10b_bg.wasm  speicherwald-ui-2b9dee8ede9479f4.js  speicherwald-ui-2b9dee8ede9479f4_bg.wasm  speicherwald-ui-469ad1100688ef41.js  speicherwald-ui-48747ba5084efacb.js  speicherwald-ui-48747ba5084efacb_bg.wasm  speicherwald-ui-4fcbb975f5aeda26.js  speicherwald-ui-4fcbb975f5aeda26_bg.wasm  speicherwald-ui-52912627b7e16db.js  speicherwald-ui-52912627b7e16db_bg.wasm  speicherwald-ui-58513b8ac3bf8ce6.js  speicherwald-ui-58513b8ac3bf8ce6_bg.wasm  speicherwald-ui-70eb28cd650e4911.js  speicherwald-ui-70eb28cd650e4911_bg.wasm  speicherwald-ui-7896d53db065efeb_bg.wasm  speicherwald-ui-8758262e19695eb.js  speicherwald-ui-8758262e19695eb_bg.wasm  speicherwald-ui-8892850294da83ad.js  speicherwald-ui-8e8fc14f74ba08a6.js  speicherwald-ui-8e8fc14f74ba08a6_bg.wasm  speicherwald-ui-94e3636a958fdca9.js  speicherwald-ui-94e3636a958fdca9_bg.wasm  speicherwald-ui-a9c22b95f94a734c.js  speicherwald-ui-a9c22b95f94a734c_bg.wasm  speicherwald-ui-ab862f45e6f9a5e4.js  speicherwald-ui-ab862f45e6f9a5e4_bg.wasm  speicherwald-ui-b26592fb5334a862.js  speicherwald-ui-b26592fb5334a862_bg.wasm  speicherwald-ui-c0a4f470b08082f.js  speicherwald-ui-c0a4f470b08082f_bg.wasm  speicherwald-ui-c12432f063a3d68f.js  speicherwald-ui-c12432f063a3d68f_bg.wasm  speicherwald-ui-c4d768d08c6f54b0_bg.wasm  speicherwald-ui-e538cb52ae9c635c.js  speicherwald-ui-e538cb52ae9c635c_bg.wasm  speicherwald-ui-f315fda98f1d7c12.js  (+2 more)
ui/.stage/: speicherwald-ui-29cb6b406c04d0e6.js  speicherwald-ui-29cb6b406c04d0e6_bg.wasm  speicherwald-ui-94e3636a958fdca9_bg.wasm  style-d1b0017c229699ba.css
ui/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
webui/: Cargo.toml  Trunk.toml  fix_signals.py  index.html  style.css
webui/src/: api.rs  main.rs  test_dioxus.rs  types.rs  ui_utils.rs
