[package]
name = "speicherwald-ui"
version = "0.1.0"
edition = "2021"
authors = ["SpeicherWald Contributors"]
license = "GPL-3.0-or-later"

[dependencies]
dioxus = { version = "0.7", features = ["macro"] }
dioxus-web = "0.7"
dioxus-router = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "EventSource",
  "MessageEvent",
  "EventTarget",
  "Window",
  "Location",
  "Navigator",
  "Clipboard",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
] }
urlencoding = "2"

[profile.release]
# Maximale Optimierung für WebAssembly
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"  # Optimierung für Größe
