[package]
name = "speicherwald-desktop"
version = "0.1.0"
edition = "2021"
authors = ["SpeicherWald Contributors"]
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "1" }
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }
ico = "0.3"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
